--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'application'
+
+
+mainClassName = 'io.ktor.server.netty.DevelopmentEngine'
 
 sourceCompatibility = 1.8
 
@@ -43,4 +47,8 @@ kotlin {
     experimental {
         coroutines "enable"
     }
+}
+
+task stage {
+    dependsOn installDist
 }
