Gradle Logger Dependency Added.

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
-
+    compile 'org.slf4j:slf4j-nop:1.7.25'
     compile "io.ktor:ktor:$ktor_version" // ktor dependency
     compile "io.ktor:ktor-server-netty:$ktor_version" // ktor netty dependency
 }
