--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,6 +7,6 @@ ktor {
   }
 
   application {
-    modules = [com.healer.server.TestServerKt.calls]
+    modules = [com.healer.server.TestServerKt.main]
   }
 }
