--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+
     }
 }
 
@@ -19,9 +22,9 @@ version '1.0-SNAPSHOT'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: 'java'
 
-
-mainClassName = 'io.ktor.server.netty.DevelopmentEngine'
+mainClassName = 'com.healer.server.TestServerkt'
 
 sourceCompatibility = 1.8
 
@@ -37,6 +40,20 @@ dependencies {
     compile 'org.slf4j:slf4j-nop:1.7.25'
     compile "io.ktor:ktor:$ktor_version" // ktor dependency
     compile "io.ktor:ktor-server-netty:$ktor_version" // ktor netty dependency
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+}
+jar { // To Build a jar
+    manifest {
+        attributes(
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Main-Class': 'com.healer.server.TestServerKt'
+        )
+    }
+
+    from { //Pack Dependencies into the jar file
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 compileKotlin {
