--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 ktor {
   deployment {
     environment = development
-    port = ${PORT}
+    port = ${PORT}:5000
     autoreload = true
     watch = [ kblog ]
   }
